# rsgeotools

./: CMakeLists.txt  LICENSE  Makefile  README.md
conf/: osm-conf.ini
rvtgen3d-data/: color_codes.txt
rvtgen3d-data/models/: bridge-base.ply  bridge-end.ply  bridge-garbage.ply  building-construction-part.ply  building-entrance-1.ply  building-roof-part1.ply  building-roof-part2.ply  bush1.ply  house01.ply  house02.ply  house03.ply  house04.ply  powertower1.ply  powertower2.ply  railway-tower.ply  road-sign-give-way.ply  road-sign-stop.ply  roof-rural-01.ply  roof-rural-02.ply  roof-shape-dome.ply  roof-shape-onion.ply  street-lamp-2.ply  street-lamp-footway.ply  traffic-light.ply  tree1.ply  treepack1.ply
scripts/: rsgeotools-planet-init.sh  rsgeotools-planet-process-full.sh  rsgeotools-process-hm-full.sh  rsgeotools-process-hm.sh  rsgeotools-process-mass-subdiv-shapefile.sh  rsgeotools-process-subdiv-shapefile.sh  rsgeotools-process-tile.sh  rsgeotools-process-tiles-mass.sh  rsgeotools-subdiv-o5m.sh  rsgeotools-subdiv-shapefile.sh  test1.sh
src/: rsgeotools-conv.cpp
src/conv/: CMakeLists.txt  conv.cpp
src/rvtgen3d/: CMakeLists.txt  loader.c  loader.h  main.c  main.h  rvt.c  rvt.h  rvtapp.c  rvtapp.h  rvtexport.c  rvtexport.h  rvtgen.c  rvtgen.h  rvtloader.c  rvtloader.h  rvttypes.h  rvtutil.c  rvtutil.h  tileloader.c  tileloader.h
src/rvtgen3d/clipper/: README  clipper.cpp
src/rvtgen3d/earcut/: earcut.hpp
src/rvtgen3d/rs/: rsboost.cpp  rsboost.h  rsdebug.h  rsgeom.cpp  rsgeom.h  rsmem.c  rsmem.h  rsmx.c  rsmx.h  rsnoise.c  rsnoise.h  rsthread.h
(+16 files in other folders)
